--- a/comp150-agile/essay.tex
+++ b/comp150-agile/essay.tex
@@ -22,10 +22,13 @@
 \begin{document}
 
 \maketitle
+Do daily scrums improve interpersonal relations within a game development team?
 
 \abstract{Please include an abstract of at most 100 words (these do not count towards your word count).}
 
 \section{Introduction}
+
+In this essay i will disscuss
 
 Write your introduction here. A brief introduction is recommended, which should outline key details of the chosen topic and the reviewed papers, motivate the work, and provide a roadmap of key points to the reader. The motivation is quite important here, as essays should have a contribution (i.e., what is the point of the essay, and what does the reader take away from the essay) and the link between the motivation (in the introduction) and the contribution (in the conclusion) should be made clear.
 
