--- a/comp150-agile/references.bib
+++ b/comp150-agile/references.bib
@@ -7,3 +7,14 @@
 	number={3}, 
 	pages={379-423}
 }
+@article{[1],
+	author = {Ning Li1, Bradley L. Kirkman, Christopher O. L. H. Porter},
+	journal = {Academy of Management Review},
+	title = {TOWARD A MODEL OF WORK TEAM ALTRUISM NING},
+	year = {2014},
+	volume = {39},
+	number = {4},
+	pages = {541-565}
+}
+@article{[2],
+	author = {Patricia L. Costa, Ana M. Passos, Arnold B. Bakker
