added references added conclusion

--- a/comp150-agile/essay.tex
+++ b/comp150-agile/essay.tex
@@ -43,12 +43,12 @@ The aim of this being not only the resolutions of the barriers by the scrum mast
 Researchers in Psychology have shown that teams perform better the greater team cooperation and helping behaviour. Teams composed of more altruistic individuals, do better than those composed of more selfish ones [1].  The same researcher feels that some “work team setting also provides opportunities for team members to behave egoistically and to promote self-interest” [1]. The author feels that properly conducted scrum meetings would reduce the negative impact of individual team members that lean towards self-interest. Other authors have noted that just one disagreeable member of the team can have a negative impact on the rest of the team” thereby destroy interpersonal relationships” [4].
 Within the games industry, the range of skills needed to create any game is wildly diverse. From artists to game designers to engine programmers. With such a range, conflict will occur at some point. One type of conflict is Relationship conflict, this conflict “is interpersonally focused” [2] and research describes it to stem from “disagreements about personality differences, different values, or different norms” [2]. While this may mean relations within the team are suffering, the same author also argues that conflict may benefit a team as it could allow “teams to consider a broader range of solutions” and “reduces the likelihood of thought processing biases” [2]. The strict framework of a scrum meeting reduces the likely hood of such conflict arising as it reduces the influence of personalities to the reports. In contrast your more traditional meeting has much more flexibility, allowing the different values and personalities of the team to influence. While the strict framework of scrum meetings may reduce conflict, the author believes it also limits the interpersonal growth. This is due to the fact that the barriers are left for the scrum master to solve, meaning the team misses out on a potential bonding exercise and use of team expertise to fix potential problems.
 When a scrum meeting is performed in the style as suggested by [7,8], the description of the barriers they will face is the greatest source of interpersonal growth. The author argues that knowing the process that an individual will do and knowing what they consider barriers the team is able to judge their peer’s strengths and weaknesses. This allows one to promote the strengths and support the weaknesses of their team members. The author argues that this is a deepening of interpersonal relations.
-To promote good interpersonal relations there has to be effective communication within the team “The exchange of information is vital to the success of two or more individuals working as a team” [12]. Within a scrum meeting the scrum master should be a skilled communicator and coordinator. In addition, they can ensure an environment which allows members to “clarify misunderstandings and to acknowledge the receipt of information” [12] and that individuals feel confident to discuss the checklist (what you did today, what you will do tomorrow, and problems you will face). The author feels for interpersonal relations to improve good communication (as described above) is key. 
+To promote good interpersonal relations there has to be effective communication within the team “The exchange of information is vital to the success of two or more individuals working as a team” [11]. Within a scrum meeting the scrum master should be a skilled communicator and coordinator. In addition, they can ensure an environment which allows members to “clarify misunderstandings and to acknowledge the receipt of information” [11] and that individuals feel confident to discuss the checklist (what you did today, what you will do tomorrow, and problems you will face). The author feels for interpersonal relations to improve good communication (as described above) is key. 
 
 
 \section{Conclusion}
 
-The author feels that a successful scrum meeting should provide the following; A definition of roles, team bonding, airing of conflicts/impediments, progress of each individual, progress of the project as a whole and ensuring the common goal of the team is achieved (sprint goal).***TBF*** 
+The author feels that a successful scrum meeting should provide the following; A definition of roles, team bonding, airing of conflicts/impediments, progress of each individual, progress of the project as a whole and ensuring the common goal on track to be achieved (sprint goal).  The current strategy to scrum meetings does not advocate problem solving during the meeting. However, the addition of some methods suggested in [9] such as; collective problem solving, if not during the meeting then after could be hugely beneficial to improving the interpersonal relations within the team, research on effective team working supports the authors beliefs. Further research would have to be done to prove this.
 
 \bibliographystyle{ieeetran}
 \bibliography{references}
