--- a/comp150-agile/references.bib
+++ b/comp150-agile/references.bib
@@ -1,20 +1,72 @@
-@article{shannon, 
-	author={Shannon, Claude E.}, 
-	journal={The Bell System Technical Journal}, 
-	title={A mathematical theory of communication}, 
-	year={1948}, 
-	volume={27}, 
-	number={3}, 
-	pages={379-423}
+@article{li2014toward,
+  title={Toward a model of work team altruism},
+  author={Li, Ning and Kirkman, Bradley L and Porter, Christopher OLH},
+  journal={Academy of Management Review},
+  volume={39},
+  number={4},
+  pages={541--565},
+  year={2014},
+  publisher={Academy of Management}
+  }
 }
-@article{[1],
-	author = {Ning Li1, Bradley L. Kirkman, Christopher O. L. H. Porter},
-	journal = {Academy of Management Review},
-	title = {TOWARD A MODEL OF WORK TEAM ALTRUISM NING},
-	year = {2014},
-	volume = {39},
-	number = {4},
-	pages = {541-565}
+@article{costa2015direct,
+  title={Direct and Contextual Influence of Team Conflict on Team Resources, Team Work Engagement, and Team Performance},
+  author={Costa, Patr{\'\i}cia L and Passos, Ana M and Bakker, Arnold B},
+  journal={Negotiation and Conflict Management Research},
+  volume={8},
+  number={4},
+  pages={211--227},
+  year={2015},
+  publisher={Wiley Online Library}
+  }
+  @article{tavvcar2005skills,
+  title={Skills for effective communication and work in global product development teams},
+  author={Tav{\v{c}}ar, Jo{\v{z}}e and {\v{Z}}avbi, Roman and Verlinden, Jouke and Duhovnik, Jo{\v{z}}e},
+  journal={Journal of engineering design},
+  volume={16},
+  number={6},
+  pages={557--576},
+  year={2005},
+  publisher={Taylor \& Francis}
 }
-@article{[2],
-	author = {Patricia L. Costa, Ana M. Passos, Arnold B. Bakker
+@article{barrick1998relating,
+  title={Relating member ability and personality to work-team processes and team effectiveness.},
+  author={Barrick, Murray R and Stewart, Greg L and Neubert, Mitchell J and Mount, Michael K},
+  journal={Journal of applied psychology},
+  volume={83},
+  number={3},
+  pages={377},
+  year={1998},
+  publisher={American Psychological Association}
+}
+@article{gorse2007communication,
+  title={Communication behaviour during management and design team meetings: a comparison of group interaction},
+  author={Gorse, Christopher A and Emmitt, Stephen},
+  journal={Construction management and economics},
+  volume={25},
+  number={11},
+  pages={1197--1213},
+  year={2007},
+  publisher={Taylor \& Francis}
+  }
+  @article{fletcher2006effects,
+  title={The effects of communication modality on performance and self-ratings of teamwork components},
+  author={Fletcher, Thomas D and Major, Debra A},
+  journal={Journal of Computer-Mediated Communication},
+  volume={11},
+  number={2},
+  pages={557--576},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+@article{sauer2013meetings,
+  title={Meetings as networks: Applying social network analysis to team interaction},
+  author={Sauer, Nils Christian and Kauffeld, Simone},
+  journal={Communication Methods and Measures},
+  volume={7},
+  number={1},
+  pages={26--47},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+  
