--- a/comp150-agile/essay.tex
+++ b/comp150-agile/essay.tex
@@ -23,10 +23,9 @@
 
 \maketitle
 
-\abstract{Please include an abstract of at most 100 words (these do not count towards your word count).}
 
 \section{Introduction}
-There is limited research on the topic of Daily scrum meetings and whether they improve the interpersonal relations of the team, however there is a lot of theory around team effectiveness across many work disciplines which can be extrapolated into the topic under discussion. 
+There is limited research on the topic of Daily scrum meetings and whether they improve the interpersonal relations of the team. However there is a lot of theory around team effectiveness across many work disciplines which can be extrapolated to fit the principles of Agile Software Development \cite{Agile}. 
 
 In the following essay the author will outline '‘Daily Scrum meetings' this will then be followed by the main discussion which will be based upon any relevant research and the authors own conclusions. 
 
@@ -46,19 +45,19 @@ During the meetings each team member stands and informs the rest of the team wha
 
 The aim of this being not only the resolutions of the barriers by the scrum master, but to keep the team informed on the general progress of the other members and the project as a whole. 
 
-According to various online guides [7,8] the role of the problem solver is left to the scrum master. In contrast to this, professionals in other fields describe an effective meeting to draw "upon each members' knowledge, skills, and perspectives to solve problems and to support one another" [9]. Research in relevant fields found that "Relationships in virtual teams are developed and strengthened through a proactive effort to solve problems" \cite[p. x]{tavvcar2005skills}. 
+According to various online guides  \cite{ DailyScrum, EffectiveScrum} the role of the problem solver is left to the scrum master. In contrast to this, professionals in other fields describe an effective meeting to draw "upon each members' knowledge, skills, and perspectives to solve problems and to support one another" \cite{LeadershipLesson}. Research in relevant fields found that "Relationships in virtual teams are developed and strengthened through a proactive effort to solve problems" \cite[p. 559]{tavvcar2005skills}. 
 
-Researchers in Psychology have shown that teams perform better the greater team cooperation and helping behaviour. Teams composed of more altruistic individuals, do better than those composed of more selfish ones \cite[p. x]{li2014toward}.  The same researcher feels that some "work team setting also provides opportunities for team members to behave egoistically and to promote self-interest"\cite[p. x]{li2014toward}. The author feels that properly conducted scrum meetings would reduce the negative impact of individual team members that lean towards self-interest. Other authors have noted that just one disagreeable member of the team can have a negative impact on the rest of the team "thereby destroy interpersonal relationships" \cite[p. x] {barrick1998relating}.
+Researchers in Psychology have shown that teams perform better the greater team cooperation and helping behaviour. Teams composed of more altruistic individuals, do better than those composed of more selfish ones \cite[p. 542]{li2014toward}.  The same researcher feels that some "work team setting also provides opportunities for team members to behave egoistically and to promote self-interest"\cite[p. 542]{li2014toward}. The author feels that properly conducted scrum meetings would reduce the negative impact of individual team members that lean towards self-interest. Other authors have noted that just one disagreeable member of the team can have a negative impact on the rest of the team "thereby destroy interpersonal relationships" \cite[p. 381] {barrick1998relating}.
 
-Within the games industry, the range of skills needed to create any game is wildly diverse. From artists to game designers to engine programmers. With such a range, conflict will occur at some point\cite{gorse2007communication}. One type of conflict is Relationship conflict, this conflict "is interpersonally focused" \cite [p. x]{costa2015direct} and research describes it to stem from "disagreements about personality differences, different values, or different norms" \cite [p. x]{costa2015direct}. While this may mean relations within the team are suffering, the same author also argues that conflict may benefit a team as it could allow "teams to consider a broader range of solutions" and "reduces the likelihood of thought processing biases"\cite [p. x]{costa2015direct}. The strict framework of a scrum meeting reduces the likely hood of such conflict arising as it reduces the influence of personalities to the reports. In contrast your more traditional meeting has much more flexibility, allowing the different values and personalities of the team to influence. While the strict framework of scrum meetings may reduce conflict, the author believes it also limits the interpersonal growth. This is due to the fact that the barriers are left for the scrum master to solve, meaning the team misses out on a potential bonding exercise and use of team expertise to fix potential problems.
+Within the games industry, the range of skills needed to create any game is wildly diverse. From artists to game designers to engine programmers. With such a range, conflict will occur at some point\cite{gorse2007communication}. One type of conflict is Relationship conflict, this conflict "is interpersonally focused" \cite [p. 215]{costa2015direct} and research describes it to stem from "disagreements about personality differences, different values, or different norms" \cite [p. 215]{costa2015direct}. While this may mean relations within the team are suffering, the same author also argues that conflict may benefit a team as it could allow "teams to consider a broader range of solutions" and "reduces the likelihood of thought processing biases"\cite [p. 215]{costa2015direct}. The strict framework of a scrum meeting reduces the likely hood of such conflict arising as it reduces the influence of personalities to the reports. In contrast your more traditional meeting has much more flexibility, allowing the different values and personalities of the team to influence. While the strict framework of scrum meetings may reduce conflict, the author believes it also limits the interpersonal growth. This is due to the fact that the barriers are left for the scrum master to solve, meaning the team misses out on a potential bonding exercise and use of team expertise to fix potential problems.
 
-When a scrum meeting is performed in the style as suggested by [7,8], the description of the barriers they will face is the greatest source of interpersonal growth. The author argues that knowing the process that an individual will do and knowing what they consider barriers the team is able to judge their peer’s strengths and weaknesses. This allows one to promote the strengths and support the weaknesses of their team members. The author argues that this is a deepening of interpersonal relations.
+When a scrum meeting is performed in the style as suggested by \cite{ DailyScrum, EffectiveScrum}, the description of the barriers they will face is the greatest source of interpersonal growth. The author argues that knowing the process that an individual will do and knowing what they consider barriers the team is able to judge their peer’s strengths and weaknesses. This allows one to promote the strengths and support the weaknesses of their team members. The author argues that this is a deepening of interpersonal relations.
 
-To promote good interpersonal relations there has to be effective communication within the team "The exchange of information is vital to the success of two or more individuals working as a team"\cite [p. x]{fletcher2006effects}. Within a scrum meeting the scrum master should be a skilled communicator and coordinator. In addition, they can ensure an environment which allows members to "clarify misunderstandings and to acknowledge the receipt of information" \cite [p. x]{fletcher2006effects} and that individuals feel confident to discuss the checklist (what you did today, what you will do tomorrow, and problems you will face). The author feels for interpersonal relations to improve good communication (as described above) is key. 
+To promote good interpersonal relations there has to be effective communication within the team "The exchange of information is vital to the success of two or more individuals working as a team"\cite [p. 559]{fletcher2006effects}. Within a scrum meeting the scrum master should be a skilled communicator and coordinator. In addition, they can ensure an environment which allows members to "clarify misunderstandings and to acknowledge the receipt of information" \cite [p. 559]{fletcher2006effects} and that individuals feel confident to discuss the checklist (what you did today, what you will do tomorrow, and problems you will face). 
 
 
 \section{Conclusion}
-The author feels that a successful scrum meeting should provide the following; A definition of roles, team bonding, airing of conflicts/impediments, progress of each individual, progress of the project as a whole and ensuring the common goal on track to be achieved (sprint goal).  The current strategy to scrum meetings does not advocate problem solving during the meeting. However, the addition of some methods suggested in [9] such as; collective problem solving, if not during the meeting then after could be hugely beneficial to improving the interpersonal relations within the team, research on effective team working supports the authors beliefs. Further research would have to be done to prove this.
+The author feels that a successful scrum meeting should provide the following; A definition of roles, team bonding, airing of conflicts/impediments, progress of each individual, progress of the project as a whole and ensuring the common goal on track to be achieved (sprint goal).  The current strategy to scrum meetings does not advocate problem solving during the meeting. However, the addition of some methods suggested in  \cite{LeadershipLesson} such as; collective problem solving, if not during the meeting then after could be hugely beneficial to improving the interpersonal relations within the team, research on effective team working supports the authors beliefs. Further research would have to be done to prove this.
 
 \bibliographystyle{ieeetran}
 \bibliography{references}
