--- a/comp150-agile/references.bib
+++ b/comp150-agile/references.bib
@@ -68,4 +68,29 @@
   year={2013},
   publisher={Taylor \& Francis}
 }
+@electronic{Agile,
+ author   =  { K. Beck, M. Beedle, A. van Bennekum, et al.},
+ title     = {Manifesto for Agile Software Development},
+ url       = {http://agilemanifesto.org/},
+urldate = {23-11-2016}
+}
+@electronic{DailyScrum,
+ author   = {mountaingoatsoftware},
+ title     = {Daily Scrum Meeting},
+ url       = {https://www.mountaingoatsoftware.com/agile/scrum/daily-scrum},
+urldate = {23-11-2016}
+}
+@electronic{EffectiveScrum,
+ author   = {base36},
+ title     = {How to Run an Effective Scrum Meeting},
+ url       = {http://www.base36.com/2013/03/how-to-run-an-effective-scrum-meeting/},
+urldate ={23-11-2016}
+}
+@electronic{LeadershipLesson,
+ author   = {Yvette Pigeon, Ed.D., and Omar Khan, M.D., M.H.S.},
+ title     = {Leadership Lesson: Tools for Effective Team Meetings - How I Learned to Stop Worrying and Love my Team},
+ url       = {https://www.aamc.org/members/gfa/faculty_vitae/148582/team_meetings.html},
+urldate ={23-11-2016}
+}
+
   
