added references to say date last visited

--- a/comp150-agile/references.bib
+++ b/comp150-agile/references.bib
@@ -1,3 +1,5 @@
+\usepackage{biblatex}
+
 @article{li2014toward,
   title={Toward a model of work team altruism},
   author={Li, Ning and Kirkman, Bradley L and Porter, Christopher OLH},
@@ -68,29 +70,29 @@
   year={2013},
   publisher={Taylor \& Francis}
 }
-@electronic{Agile,
+@misc{Agile,
  author   =  { K. Beck, M. Beedle, A. van Bennekum, et al.},
  title     = {Manifesto for Agile Software Development},
  url       = {http://agilemanifesto.org/},
-urldate = {23-11-2016}
+ note ={(Last Visited on: 23-11-2016)}
 }
-@electronic{DailyScrum,
+@misc{DailyScrum,
  author   = {mountaingoatsoftware},
  title     = {Daily Scrum Meeting},
  url       = {https://www.mountaingoatsoftware.com/agile/scrum/daily-scrum},
-urldate = {23-11-2016}
+note ={(Last Visited on: 23-11-2016)}
 }
-@electronic{EffectiveScrum,
+@misc{EffectiveScrum,
  author   = {base36},
  title     = {How to Run an Effective Scrum Meeting},
  url       = {http://www.base36.com/2013/03/how-to-run-an-effective-scrum-meeting/},
-urldate ={23-11-2016}
+note ={(Last Visited on: 23-11-2016)}
 }
-@electronic{LeadershipLesson,
+@misc{LeadershipLesson,
  author   = {Yvette Pigeon, Ed.D., and Omar Khan, M.D., M.H.S.},
  title     = {Leadership Lesson: Tools for Effective Team Meetings - How I Learned to Stop Worrying and Love my Team},
  url       = {https://www.aamc.org/members/gfa/faculty_vitae/148582/team_meetings.html},
-urldate ={23-11-2016}
+note ={(Last Visited on: 23-11-2016)}
 }
 
   
