--- a/comp150-agile/references.bib
+++ b/comp150-agile/references.bib
@@ -36,7 +36,7 @@
   journal={Journal of applied psychology},
   volume={83},
   number={3},
-  pages={377},
+  pages={377-391},
   year={1998},
   publisher={American Psychological Association}
 }
@@ -71,7 +71,7 @@
   publisher={Taylor \& Francis}
 }
 @misc{Agile,
- author   =  { K. Beck, M. Beedle, A. van Bennekum, et al.},
+ author   =  {Kent Beck,  Mike Beedle ,Arie van Bennekum ,Alistair Cockburn, Ward Cunningham, Martin Fowler, James Grenning, Jim Highsmith, Andrew Hunt, Ron Jeffries, Jon Kern, Brian Marick, Robert C. Martin, Steve Mellor, Ken Schwaber, Jeff Sutherland, Dave Thomas},
  title     = {Manifesto for Agile Software Development},
  url       = {http://agilemanifesto.org/},
  note ={(Last Visited on: 23-11-2016)}
@@ -89,10 +89,18 @@ note ={(Last Visited on: 23-11-2016)}
 note ={(Last Visited on: 23-11-2016)}
 }
 @misc{LeadershipLesson,
- author   = {Yvette Pigeon, Ed.D., and Omar Khan, M.D., M.H.S.},
+ author   = {Yvette Pigeon,Omar Khan},
  title     = {Leadership Lesson: Tools for Effective Team Meetings - How I Learned to Stop Worrying and Love my Team},
  url       = {https://www.aamc.org/members/gfa/faculty_vitae/148582/team_meetings.html},
 note ={(Last Visited on: 23-11-2016)}
 }
-
+ @article{badstand,
+author =  {Phillip A Laplante},
+title = {Stand and Deliver: Why I Hate Stand-Up Meetings},
+journal = {Queue - Power Management },
+volume = {1},
+number = {7},
+pages ={7},
+year = {2013},
+}
   
