--- a/comp150-agile/essay.tex
+++ b/comp150-agile/essay.tex
@@ -44,7 +44,7 @@ Research in Psychology from \cite{li2014toward} has shown that teams perform bet
 
 Within the games industry, the range of skills needed to create any game is wildly diverse. From artists to game designers to engine programmers. With such a range, conflict will occur at some point\cite{gorse2007communication}. One type of conflict is relationship conflict, this conflict `is interpersonally focused` \cite [p. 215]{costa2015direct} and research describes it to stem from `disagreements about personality differences, different values, or different norms` \cite [p. 215]{costa2015direct}. While this may mean relations within the team are suffering, the same author also argues that conflict may benefit a team as it could allow `teams to consider a broader range of solutions` and `reduces the likelihood of thought processing biases`\cite [p. 215]{costa2015direct}. The strict framework of a scrum meeting reduces the likely hood of such conflict arising as it reduces the influence of personalities to the reports. In contrast the more traditional meeting \cite{costa2015direct, gorse2007communication}  has more flexibility, allowing the different values and personalities of the team to influence. While the strict framework of scrum meetings may reduce conflict, the author believes it also limits the interpersonal growth. This is due to the fact that the barriers are left for the scrum master to solve. The team could miss out on the opportunity for potential bonding exercises and use of team expertise to fix potential problems.
 
-When a scrum meeting is performed in the style as suggested by \cite{ DailyScrum, EffectiveScrum}, the description of the barriers they will face is the greatest source of interpersonal growth. The author argues that knowing the process that an individual will do and knowing what they consider barriers the team is able to judge their peer’s strengths and weaknesses. This allows one to promote the strengths and support the weaknesses of their team members. The author argues that this is a deepening of interpersonal relations.
+When a scrum meeting is performed in the style as suggested by \cite{AgileScrum}, the description of the barriers they will face is the greatest source of interpersonal growth. The author argues that knowing the process that an individual will do and knowing what they consider barriers the team is able to judge their peer’s strengths and weaknesses. This allows one to promote the strengths and support the weaknesses of their team members. The author argues that this is a deepening of interpersonal relations.
 
 To promote good interpersonal relations there has to be effective communication within the team `The exchange of information is vital to the success of two or more individuals working as a team`\cite [p. 559]{fletcher2006effects}. Within a scrum meeting the scrum master should be a skilled communicator and coordinator. In addition, they can ensure an environment which allows members to`clarify misunderstandings and to acknowledge the receipt of information`\cite [p. 559]{fletcher2006effects} and that individuals feel confident to discuss the checklist (what you did today, what you will do tomorrow, and problems you will face). 
 
