--- a/comp150-agile/references.bib
+++ b/comp150-agile/references.bib
@@ -103,4 +103,14 @@ number = {7},
 pages ={7},
 year = {2013},
 }
+@article{AgileScrum,
+author = { Keith Clinton},
+title = {Agile game development with Scrum},
+pages = {33-57},
+publisher = {Addison-Wesley},
+year = {2010},
+series {The Addison-Wesley signature series},
+}
+
+
   
