--- a/comp150-agile/essay.tex
+++ b/comp150-agile/essay.tex
@@ -25,7 +25,7 @@
 
 
 \section{Introduction}
-There is limited research on the topic of Daily scrum meetings and whether they improve the interpersonal relations of the team. However there is a lot of theory around team effectiveness across many work disciplines which can be extrapolated to fit the principles of Agile Software Development \cite{Agile}. In the following essay the author will outline '‘Daily Scrum meetings' this will then be followed by the main discussion which will be based upon any relevant research and the authors own conclusions. By drawing parallels between research around team working and the existing literature of ‘Daily scrum meetings`, the author will demonstrate how scrum meetings could be used to improve interpersonal relations. After consideration of an opposing view of stand-up meetings (Daily scrum meetings)\cite{badstand}. 
+There is limited research on the topic of Daily scrum meetings and whether they improve the interpersonal relations of the team. However, there is a lot of theory around team effectiveness across many work disciplines which can be extrapolated to fit the principles of Agile Software Development \cite{Agile}. In the following essay the author will outline '‘Daily Scrum meetings' this will then be followed by the main discussion which will be based upon any relevant research and the author's own conclusions. By drawing parallels between research around team working and the existing literature of ‘Daily scrum meetings`. The author will demonstrate how scrum meetings could be used to improve interpersonal relations after taking into consideration an opposing view of stand-up meetings (Daily scrum meetings)\cite{badstand}. 
 
 
 \section{Discussion}
@@ -38,11 +38,11 @@ In the software development industry, daily scrums meetings have been practiced 
 \end{description}
 
 
-According to various online guides\cite{DailyScrum, EffectiveScrum} the role of the problem solver is left to the scrum master. In contrast to this, in more traditonal meetings professionals in other fields describe an effective meeting to draw `upon each members' knowledge, skills, and perspectives to solve problems and to support one another`\cite{LeadershipLesson}. Research into other styles of meetings found that `Relationships in virtual teams are developed and strengthened through a proactive effort to solve problems`\cite[p. 559]{tavvcar2005skills}. 
+According to various online guides\cite{DailyScrum, EffectiveScrum} the role of the problem solver is left to the scrum master. In contrast to this, in more traditonal meetings professionals in other fields describe an effective meeting to draw `upon each members' knowledge, skills, and perspectives to solve problems and to support one another\cite{LeadershipLesson}. Research into other styles of meetings found that `Relationships in virtual teams are developed and strengthened through a proactive effort to solve problems`\cite[p. 559]{tavvcar2005skills}. 
 
 Research in Psychology from \cite{li2014toward} has shown that teams perform better with greater team cooperation and helping behaviour. Teams composed of more altruistic individuals, do better than those composed of more selfish ones \cite[p. 542]{li2014toward}.  The same researcher feels that some `work team setting also provides opportunities for team members to behave egoistically and to promote self-interest`\cite[p. 542]{li2014toward}. The author feels that properly conducted scrum meetings would reduce the negative impact of individual team members that lean towards self-interest. Other authors have noted that just one disagreeable member of the team can have a negative impact on the rest of the team `thereby destroy interpersonal relationships`\cite[p. 381] {barrick1998relating}.
 
-Within the games industry, the range of skills needed to create any game is wildly diverse. From artists to game designers to engine programmers. With such a range, conflict will occur at some point\cite{gorse2007communication}. One type of conflict is relationship conflict, this conflict `is interpersonally focused` \cite [p. 215]{costa2015direct} and research describes it to stem from `disagreements about personality differences, different values, or different norms` \cite [p. 215]{costa2015direct}. While this may mean relations within the team are suffering, the same author also argues that conflict may benefit a team as it could allow `teams to consider a broader range of solutions` and `reduces the likelihood of thought processing biases`\cite [p. 215]{costa2015direct}. The strict framework of a scrum meeting reduces the likely hood of such conflict arising as it reduces the influence of personalities to the reports. In contrast the more traditional meeting \cite{costa2015direct, gorse2007communication}  has more flexibility, allowing the different values and personalities of the team to influence. While the strict framework of scrum meetings may reduce conflict, the author believes it also limits the interpersonal growth. This is due to the fact that the barriers are left for the scrum master to solve. The team could miss out on the opportunity for potential bonding exercises and use of team expertise to fix potential problems.
+Within the games industry, a wide range of diverse skills are required to create any game from artists to game designers to engine programmers. With such a range, conflict will occur at some point\cite{gorse2007communication}. One type of conflict is relationship conflict, this conflict `is interpersonally focused` \cite [p. 215]{costa2015direct} and research describes it to stem from `disagreements about personality differences, different values, or different norms` \cite [p. 215]{costa2015direct}. While this may mean relations within the team are suffering, the same author also argues that conflict may benefit a team as it could allow `teams to consider a broader range of solutions` and `reduces the likelihood of thought processing biases`\cite [p. 215]{costa2015direct}. The strict framework of a scrum meeting reduces the likely hood of such conflict arising as it reduces the influence of personalities to the reports. In contrast the more traditional meeting \cite{costa2015direct, gorse2007communication}  has more flexibility, allowing the different values and personalities of the team to influence. While the strict framework of scrum meetings may reduce conflict, the author believes it also limits the interpersonal growth. This is due to the fact that the barriers are left for the scrum master to solve. The team could miss out on the opportunity for potential bonding exercises and use of team expertise to fix potential problems.
 
 When a scrum meeting is performed in the style as suggested by \cite{AgileScrum}, the description of the barriers they will face is the greatest source of interpersonal growth. The author argues that knowing the process that an individual will do and knowing what they consider barriers the team is able to judge their peer’s strengths and weaknesses. This allows one to promote the strengths and support the weaknesses of their team members. The author argues that this is a deepening of interpersonal relations.
 
@@ -50,7 +50,7 @@ To promote good interpersonal relations there has to be effective communication 
 
 
 \section{Conclusion}
-The author feels that a successful scrum meeting should provide the following; A definition of roles, team bonding, airing of conflicts/impediments, progress of each individual, progress of the project as a whole and ensuring the common goal on track to be achieved (sprint goal).  The current strategy to scrum meetings does not advocate problem solving during the meeting. However, the addition of some methods suggested in  \cite{LeadershipLesson} such as; collective problem solving within specialist groups, if not during the meeting then after could be hugely beneficial to improving the interpersonal relations within the team, research on effective team working supports the authors beliefs. Further research would have to be done to prove this.
+The author feels that a successful scrum meeting should provide the following; A definition of roles, team bonding, airing of conflicts/barriers, progress of each individual, progress of the project as a whole and ensuring the common goal on track to be achieved (sprint goal).  The current strategy to scrum meetings does not advocate problem solving during the meeting. However, the addition of some methods suggested in \cite{LeadershipLesson} such as; collective problem solving within specialist groups, if not during the meeting then after could be hugely beneficial to improving the interpersonal relations within the team, research on effective team working supports the authors beliefs. Further research would have to be done to prove this.
 
 \bibliographystyle{ieeetran}
 \bibliography{references}
